--- a/porut/index.html
+++ b/porut/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="./main.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Document</title>
@@ -19,7 +18,10 @@
             <i class="fas">&#xf002;</i>
         </div>
     </div>
+    <p id="test"></p>
     <section id="list"></section>
     <img id="current-pokemon-loading" src="src/pokeball-icon.png" class="loading-ball">
+
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
